# devfile-web

./: .clomonitor.yaml  .devfile.yaml  .dockerignore  .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .snyk  CODEOWNERS  CONTRIBUTING.md  Dockerfile  OWNERS  README.md  devfile-spec.ts  jest.config.js  jest.preset.js  lerna.json  license-header.js  nx.json  package.json  regexes.txt  renovate.json  tsconfig.base.json  workspace.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-landing-page.yml  ci.yaml  ci.yml  deploy-landing-page.yml  e2e.yml  pr-preview.yml  pushimage-next.yml  test-python-scripts.yml
.husky/: pre-commit
.storybook/: main.js
.tekton/: devfile-web-pull-request.yaml  devfile-web-push.yaml  registry-viewer-main-pull-request.yaml  registry-viewer-main-push.yaml
apps/core-e2e/: project.json
apps/landing-page/: .eslintrc.json  .gitignore  README.md  docusaurus.config.js  index.d.ts  jest.config.js  jest.config.ts  navigation.ts  next-sitemap.config.mjs  next.config.js  next.config.mjs  (+7 more)
apps/landing-page-e2e/: cypress.config.js  cypress.config.ts  cypress.json  project.json  tsconfig.json
python/: .gitignore  README.md  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
python/src/api_workflow/: api_workflow.py
python/testing_directory/backup/config/: versions.txt
python/testing_directory/backup/navigation/: 2.0.0.yaml  2.1.0.yaml  2.2.0-alpha.yaml
python/tests/: test_api_workflow.py
scripts/: api-workflow.py  api-workflow.sh  build_multi_arch.sh  build_viewer.sh  docs.sh  move-exported-apps.sh  push.sh
(+528 files in other folders)
