[metadata]
name = devfile_web
description = Scripts for devfile-web
author = Devfile
license = Apache-2.0
license_files = LICENSE
platforms = linux
classifiers = Programming Language :: Python :: 3.9

[options]
packages = api_workflow
python_requires = >=3.9
package_dir = =src
zip_safe = no

[options.extras_require]
testing =
pytest >=7.1
pytest-cov >=3.0
mypy >=0.917
flake8 >=5.04
tox >=3.25

[options.package_data]
api_workflow = py.typed

[flake8]
max-line-length = 160
